# libptenv

./: .gitignore  CMakeLists.txt  Doxyfile  envsettings.json
include/: color.h  dataManager.h  environment.h  gaf.h  gaf_single.h  indicators.h  settings.h  threadSync.h
src/: dataManager.cpp  environment.cpp  gaf.cpp  gaf_single.cpp  indicators.cpp  main.cpp  threadSync.cpp
